change layout of clear data

--- a/lib/prototype-admin/clear-data-success.html
+++ b/lib/prototype-admin/clear-data-success.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
   Data cleared - GOV.UK Prototype Kit
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <h1 class="govuk-heading-m">
+  <h1 class="govuk-heading-m erc-text-blue">
     Data cleared
   </h1>
 
@@ -15,7 +15,7 @@
   </p>
 
   <p>
-    <a href="/">
+    <a href="/home.html">
       Prototype home page
     </a>
   </p>
