--- a/lib/prototype-admin/clear-data.html
+++ b/lib/prototype-admin/clear-data.html
@@ -1,5 +1,5 @@
 
-{% extends "layout.html" %}
+{% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
   Clear data? - GOV.UK Prototype Kit
@@ -18,12 +18,13 @@
 <form method="post">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-xl erc-text-blue">
         Clear data?
       </h1>
       {{ govukWarningText({
         text: "This will clear all of the data entered in this session",
-        iconFallbackText: "Warning"
+        iconFallbackText: "Warning",
+        classes: "erc-text-blue"
       }) }}
 
       {{ govukButton({
