--- a/lib/prototype-admin/clear-data.html
+++ b/lib/prototype-admin/clear-data.html
@@ -18,7 +18,7 @@
 <form method="post">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Clear data?
       </h1>
       {{ govukWarningText({
